# localml

./: .gitignore  Dockerfile  LICENSE  MCP.md  README.md  SUPPORTED_MODELS.md  electron-builder.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
python/: _test_inference.py  _test_matrix.py  _win_compat.py  embedding_backend.py  engine.py  routing.py  runner.py  runtime.py
python/adapters/: base.py
python/api/: embeddings.py  llm.py  media.py  routes.py  server.py
python/api/tools/: __init__.py  base.py  hermes_qwen.py  llama.py  mistral.py
python/mcp_server/: __init__.py  client.py  server.py
python/models/: README.md
python/server/: __init__.py  app.py  cli.py  hf_service.py  paths.py
python/server/openai_api/: __init__.py  routes.py
python/server/routes/: __init__.py  system.py
python/services/: __init__.py  appdata.py  events.py  hf_service.py  hw_service.py  store_service.py
python/tasks/: feature_extraction.py
scripts/: build-renderer.js  clean.js
src/main/: ipc.js  main.js  mcp-setup.js  preload.js  python-env.js  python-runner.js  sidecar.js  tray.js  updater.js
src/renderer/: index.html  styles.css  web-bridge.js
src/renderer/components/: app.jsx  chat.jsx  home.jsx  model-browser.jsx  onboarding.jsx  settings.jsx  task-workspace.jsx  welcome.jsx
website/: README.md  index.html  install.ps1  install.sh  script.js  styles.css
